@@ -1,3 +1,7 @@
+Changes since version 0.91.0:
+.............................
+- fixed crash with info panel and alt-tabbing
+
 Changes since version 0.90.0:
 .............................
 
